--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Cine Select</title>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Mukta:wght@300&family=Sarala&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script src="dist/bundle.js"></script>
