Fixed Copy Of Github Dup

--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,23 @@
     <title>Cine Select</title>
 
     <!-- Fonts -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Mukta:wght@300&family=Sarala&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Sarabun:wght@800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Old Fonts -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Mukta:wght@300&family=Sarala&display=swap"
+        rel="stylesheet"
+      /> -->
   </head>
   <body>
-    <script src="dist/bundle.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
