--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&family=Sarabun:wght@800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Sarabun:wght@800&display=swap"
       rel="stylesheet"
     />
 
